# semantic-summarization-system

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  __init__.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/services/: __init__.py
app/: __init__.py  main.py
configs/: evaluation.yaml  inference.yaml  logging.yaml  models.yaml  training.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
evaluation/: __init__.py  metrics.py
experiments/: README.md
models/: __init__.py  abstractive.py  base.py  extractive.py  model_loader.py
notebooks/: README.md
pipelines/: __init__.py  preprocessing.py  summarization.py
scripts/: evaluate.py  inference.py  train.py
tests/: __init__.py  conftest.py  test_pipeline.py
utils/: __init__.py  config.py  text_utils.py
